k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exam-converter
  labels:
    name: exam-converter
